# Rin-UI

./: .gitignore  MANIFEST.in  README.MD  main.py  pyproject.toml  requirements.txt  setup.py  test.qml  test2.qml
.github/workflows/: build.yml
RinUI/: __init__.py  qmldir
RinUI/assets/fonts/: FluentSystemIcons-Index.js  FluentSystemIcons_Index.js
RinUI/components/: Base.qml  Button.qml  ButtonBase.qml  ComboBox.qml  ContextMenu.qml  FocusIndicator.qml  Frame.qml  Hyperlink.qml  HyperlinkButton.qml  IconWidget.qml  Indicator.qml  InfoBar.qml  ProgressBar.qml  PushButton.qml  ScrollBar.qml  ScrollView.qml  ScrollViewer.qml  SettingCard.qml  Shadow.qml  Slider.qml  Switch.qml  Text.qml  TextField.qml  TextLabel.qml  ToggleSwitch.qml  ToolButton.qml  Tooltip.qml  Typography.qml  qmldir
RinUI/components/BasicInput/: Button.qml  CheckBox.qml  ComboBox.qml  DropDownButton.qml  Hyperlink.qml  RadioButton.qml  Slider.qml  Switch.qml  ToggleButton.qml  ToolButton.qml
RinUI/components/DateAndTime/: PickerView.qml  TimePicker.qml
RinUI/components/DialogsAndFlyouts/: Dialog.qml  DialogButtonBox.qml  (+2 more)
RinUI/core/: __init__.py  config.py  launcher.py  start.py  theme.py
RinUI/hooks/: __init__.py  hook-RinUI.py
RinUI/themes/: colors.qml  dark.qml  light.qml  qmldir  theme.qml  utils.qml
RinUI/utils/: FloatLayer.qml  FontIconLoader.qml  Position.qml  Severity.qml  Typography.qml  qmldir
RinUI/windows/: ContentFrame.qml  CtrlBtn.qml  Dialog.qml  DialogButtonBox.qml  ErrorPage.qml  FluentPage.qml  FluentWindow.qml  FluentWindowBase.qml  NavigationBar.qml  TitleBar.qml  qmldir
docs/: README_zhCN.MD  ToDo.MD
examples/: gallery.py  gallery.qml  requirements.txt
examples/assets/: ItemData.qml  qmldir
examples/components/: ControlClip.qml  ControlPage.qml  ControlShowcase.qml  SamplePage.qml  qmldir
examples/pages/: AllSamples.qml  BasicInput.qml  Collections.qml  DateAndTime.qml  DialogsAndFlyouts.qml  Home.qml  Iconography.qml  Layout.qml  MenusAndToolbars.qml  Navigation.qml  Settings.qml  StatusAndInfo.qml  Text.qml
scripts/: package_gallery.bat
test/: main.py  test1.qml  test2.qml
(+57 files in other folders)
