[project]
name = "rin-ui"
version = "0.1.0"
description = "A Fluent Design-like UI library for Qt Quick (QML)"
readme = "README.MD"
requires-python = ">=3.8"
dependencies = ["darkdetect~=0.8.0", "pyside6~=6.6.3.1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = ["/docs"]

[tool.hatch.build.targets.wheel]
packages = ["RinUI"]
include = ["RinUI"]

# [tool.ruff.lint]
# select = ["I", "E", 'W', "F", "FLY002"]
