[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "RinUI"
version = "0.0.8"
authors = [
    { name = "RinLit", email = "lintu233_qwq@icloud.com" }
]
description = "A Fluent Design-like UI library for Qt Quick (QML) based on PySide6"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "PySide6~=6.6.3.1",
    "darkdetect~=0.8.0",
    'pywin32==227; sys_platform == "win32"'
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[tool.setuptools]
packages = ["RinUI"]
include-package-data = true

[tool.setuptools.package-data]
RinUI = [
    "*",  # 根目录下所有文件
    "assets/**/*",
    "components/**/*",
    "themes/**/*",
    "windows/**/*",
    "utils/**/*"
]

[tool.setuptools.data-files]
"" = ["README.md", "LICENSE"]